css-files/home.css
/* ... */
.product-page.show {
    display: block;
}

.product-page .product-details {
    border: 2px solid #7e1036;
    position: absolute;
    width: 100%;
    height: 90%;
    bottom: 0;
    border-radius: 15px 15px 0 0;
    background: white;
    transition: 2s ease-in;
    transform: translateY(900px);
    display: flex;
    flex-direction: column;
}

.product-page .product-details.slide-in {
    transform: translateY(0);
}

.product-page .product-details .exit-details {
    align-self: flex-end;
    cursor: pointer;
    padding: 10px;
    color: #7e1036;
    margin: 10px;
}

.product-page .product-details .details-box {
    margin: 10px;
    height: 100%;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    overflow-y: auto;
    padding: 10px;
    gap: 30px;
}

.product-page .product-details .details-box::-webkit-scrollbar {
    display: none;
}

.product-page .product-details .about-product {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.product-page .product-details .about-product .details-img-box {
    width: 200px;
    height: 200px;
    border-radius: 10px;
}

.product-page .product-details .about-product .details-img-box img {
    height: 100%;
    width: 100%;
    object-fit: cover;
    border-radius: 10px;
    box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
}

.product-page .product-details .about-product .initial-info {
    display: flex;
    width: 100%;
    flex-direction: column;
    align-items: center;
    margin-top: 5px;
    gap: 20px;
}

.product-page .product-details .about-product .initial-info .name-info {
    display: flex;
    align-items: center;
    gap: 10px;
}

.product-page .product-details .about-product .initial-info .info {
    color: green;
    font-size: 20px;
    cursor: pointer;
}

.product-page .product-details .about-product .initial-info .price {
    color: #7e1036;
}

.product-page .product-details .about-product .initial-info .actions {
    display: flex;
    width: 100%;
    justify-content: space-between;
}

.product-page .product-details .about-product .initial-info .actions .tmi {
    display: none;
}

.product-page .product-details .about-product .initial-info .actions button {
    background: #7e1036;
    border: none;
    display: flex;
    gap: 10px;
    justify-content: center;
    color: white;
    padding: 15px;
    font-weight: bold;
    width: 150px;
    border-radius: 10px;
    box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
}

.product-page .product-details .about-product .initial-info button .actions-bi {
    font-size: 14px;
}

.product-page .product-details .about-product .initial-info button {
    background: #7e1036;
    border: none;
    display: flex;
    gap: 10px;
    justify-content: center;
    color: white;
    padding: 15px;
    font-weight: bold;
    width: 100%;
    border-radius: 10px;
    box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
}

.product-page .product-details .about-product .initial-info .desc-box {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 10px;
    margin-top: 10px;
}

.product-page .product-details .about-product .initial-info .desc-box span {
    color: grey;
    font-size: 14px;
}

.product-page .product-details .details-box .more {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.product-page .product-details .details-box .more .more-products{
    width: 100%;
    display: flex;
    overflow-x: hidden;
}

.product-page .product-details .details-box .more .more-products .m-scroll-box {
    height: 100%;
    display: flex;
    gap: 10px;
    padding-right: 10px;
    animation: back-forth 15s infinite linear;
}

.product-page .product-details .details-box .more .more-products:hover .m-scroll-box {
    animation-play-state: paused!important;
}

.product-page .product-details .details-box .more .more-products .m-product {
    height: 170px;
    width: 150px;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    position: relative;
    flex-shrink: 0;
    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
}

.product-page .product-details .details-box .more .more-products .m-product img {
    width: 100%;
    height: 100%;
    cursor: pointer;
    object-position: center;
    border-radius: 10px;
    object-fit: cover;
}

.product-page .product-details .details-box .more .more-products .m-product .m-summ-cont {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 20;
    display: flex;
    align-items: end;
    cursor: pointer;
}

.product-page .product-details .details-box .more .more-products .m-product .m-summ {
    width: 100%;
    background: white;
    height: 25%;
    padding: 2px;
    border-radius: 0 0 10px 10px;
    display: flex;
}

.product-page .product-details .details-box .more .more-products .m-product .m-summ div:nth-child(1) {
    width: 80%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.product-page .product-details .details-box .more .more-products .m-product .m-summ div:nth-child(1) h4 {
    font-size: 12px;
}

.product-page .product-details .details-box .more .more-products .m-product .m-summ div:nth-child(1) p {
    font-size: 12px;
    color: #7e1036;
}

.product-page .product-details .details-box .more .more-products .m-product .m-summ div:nth-child(2) {
    width: 20%;
    display: flex;
    border-radius: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 14px;
    color: white;
    font-weight: bold;
    background: #7e1036;
}
/* ... */

